create repository domain